[package]
name = "kfn-rs"
version = "0.1.1-alpha"
authors = ["Balázs Máhli"]
edition = "2021"
license = "GPL-3.0-or-later"
license_file = "COPYING"
keywords = ["karaoke", "reverse-engineering", "kfn", "karafun"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
dbg_hex = "0.1.1"
rust-ini = "0.18.0"
derivative = "2.2.0"