[package]
name = "kfn-rs"
version = "0.3.0-alpha"
authors = ["Balázs Máhli"]
edition = "2021"
license = "GPL-3.0-or-later"
license_file = "COPYING"
keywords = ["karaoke", "reverse-engineering", "kfn", "karafun"]
description = "Karaoke .kfn file IO library written in Rust."
documentation = "https://docs.rs/kfn-rs"
repository = "https://github.com/mazsibazsi/kfn-rs"

[[bin]]
name = "kfn_player"
path = "src/kfn_player/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
dbg_hex = "0.1.1"
rust-ini = "0.18.0"
derivative = "2.2.0"
rodio = "0.15.0"
speedy2d = "1.7.0"
crossbeam = "0.8.2"
image = "0.24.3"
async-trait = "0.1.58"
#ffmpeg-next = "5.1.1"
colorsys = "0.6.6"